--- a/app/views/kittens/show.html.erb
+++ b/app/views/kittens/show.html.erb
@@ -1,2 +1,7 @@
 <h1>Kittens#show</h1>
+<p>My name is <%= @kitten.name %></p>
+<ul>
+  <li>I am <%= @kitten.age %> years old</li>
+  <li>My cuteness rating is <%= @kitten.cuteness %></li>
+</ul>
 <p>Find me in app/views/kittens/show.html.erb</p>
